Migrate to Spring Boot and Gradle